--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,7 +14,7 @@ before:
     - go mod tidy
 
 builds:
-  - id: default
+  - id: commet
   - env:
       - CGO_ENABLED=0
     goos:
@@ -26,7 +26,8 @@ builds:
       - arm64
 
 archives:
-  - id: default
+  - id: commet
+    builds: [commet]
     formats: [tar.gz]
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
@@ -54,7 +55,7 @@ changelog:
 homebrew_casks:
   - name: commet
     binary: commet
-    ids: [default]
+    ids: [commet]
     homepage: "https://github.com/nitintf/commet"
     description: "A CLI tool that helps you write better Git commit messages with AI"
     caveats: |
